--- a/examples/ex1.ipynb
+++ b/examples/ex1.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nexus7:3243804] mca_base_component_repository_open: unable to open mca_btl_openib: librdmacm.so.1: cannot open shared object file: No such file or directory (ignored)\n"
+     ]
+    }
+   ],
    "source": [
     "from dctkit.dec import cochain as C\n",
     "from dctkit.mesh.simplex import SimplicialComplex\n",
@@ -26,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,16 +190,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-03-08 13:52:07,518\tINFO worker.py:1715 -- Started a local Ray instance. View the dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8265 \u001b[39m\u001b[22m\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -200,79 +201,55 @@
       "Generating initial population...\n",
       "DONE.\n",
       " -= START OF EVOLUTION =- \n",
-      "Evaluating initial population...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[36m(pid=671295)\u001b[0m [nexus7:671295] mca_base_component_repository_open: unable to open mca_btl_openib: librdmacm.so.1: cannot open shared object file: No such file or directory (ignored)\n",
-      "\u001b[36m(fitness pid=671295)\u001b[0m 2024-03-08 13:52:08.799190: E external/xla/xla/stream_executor/cuda/cuda_driver.cc:280] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n",
-      "\u001b[36m(fitness pid=671295)\u001b[0m CUDA backend failed to initialize: FAILED_PRECONDITION: No visible GPU devices. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Evaluating initial population...\n",
       "DONE.\n",
       "   \t     \t           fitness            \t             size             \n",
       "   \t     \t------------------------------\t------------------------------\n",
       "gen\tevals\tmin   \tavg   \tmax   \tstd   \tmin\tavg \tmax\tstd   \n",
-      "1  \t100  \t0.7327\t2.9726\t3.2333\t0.2762\t3  \t4.71\t9  \t1.6571\n",
-      "The best individual of this generation is: AddCP0(AddCP0(u, f), delP1(cobP0(u)))\n",
-      "2  \t100  \t0.7187\t2.8034\t3.0333\t0.3727\t3  \t3.52\t9  \t1.1179\n",
+      "1  \t100  \t0.7187\t2.8684\t3.2333\t0.3732\t3  \t4.39\t27 \t2.6978\n",
       "The best individual of this generation is: AddCP0(delP1(cobP0(u)), SubCP0(f, u))\n",
-      "3  \t100  \t0.7   \t2.6466\t2.8333\t0.5917\t3  \t3.46\t9  \t1.4101\n",
-      "The best individual of this generation is: AddCP0(delP1(cobP0(St1D1(St1P0(u)))), f)\n",
-      "4  \t100  \t0.7   \t2.5261\t2.8333\t0.7302\t3  \t3.76\t9  \t1.7839\n",
-      "The best individual of this generation is: AddCP0(delP1(cobP0(St1D1(St1P0(u)))), f)\n",
-      "5  \t100  \t0.5   \t2.2937\t2.8333\t0.9092\t3  \t4.26\t9  \t2.1101\n",
-      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "6  \t100  \t0.5   \t2.0295\t2.8333\t0.9997\t3  \t5.12\t11 \t2.574 \n",
-      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "7  \t100  \t0.5   \t1.5068\t2.8333\t0.9898\t3  \t6.26\t13 \t2.6443\n",
-      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "8  \t100  \t0.5   \t0.7798\t1.7791\t0.2207\t5  \t7.47\t15 \t1.7633\n",
-      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "9  \t100  \t0.5   \t0.6466\t0.9   \t0.1072\t5  \t6.34\t9  \t0.982 \n",
-      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "10 \t100  \t0.5   \t0.5817\t0.7187\t0.1024\t5  \t5.78\t7  \t0.9755\n",
-      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "11 \t100  \t0.5   \t0.532 \t0.7   \t0.0733\t5  \t5.32\t7  \t0.7332\n",
-      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "12 \t100  \t0.5   \t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
-      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "13 \t100  \t0.5   \t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
-      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "14 \t100  \t0.5   \t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
-      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "15 \t100  \t0.5   \t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
-      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "16 \t100  \t0.5   \t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
-      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "17 \t100  \t0.5   \t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
-      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "18 \t100  \t0.5   \t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
-      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "19 \t100  \t0.5   \t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
-      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
-      "20 \t100  \t0.5   \t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
-      "The best individual of this generation is: AddCP0(f, delP1(cobP0(u)))\n",
+      "2  \t100  \t0.7187\t2.7756\t3.0333\t0.4058\t3  \t3.68\t27 \t2.6263\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), SubCP0(f, u))\n",
+      "3  \t100  \t0.5   \t2.6648\t2.8333\t0.5624\t3  \t4.08\t27 \t4.2372\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "4  \t100  \t0.5   \t2.6176\t2.8333\t0.638 \t3  \t4.36\t27 \t4.8073\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "5  \t100  \t0.5   \t2.5316\t2.8333\t0.7327\t3  \t5.24\t27 \t6.1076\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "6  \t100  \t0.5   \t2.3375\t2.8333\t0.894 \t3  \t6.06\t27 \t6.785 \n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "7  \t100  \t0.5   \t2.1094\t2.8333\t1.0089\t3  \t7.56\t27 \t8.0254\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "8  \t100  \t0.5   \t1.6869\t2.8333\t1.0465\t3  \t10.84\t27 \t9.242 \n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "9  \t100  \t0.5   \t1.1798\t2.7824\t0.8537\t5  \t11.18\t27 \t8.09  \n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "10 \t100  \t0.5   \t0.6209\t0.9   \t0.1247\t5  \t6.12 \t9  \t1.1771\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "11 \t100  \t0.5   \t0.5619\t0.7187\t0.097 \t5  \t5.58 \t7  \t0.9075\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "12 \t100  \t0.5   \t0.514 \t0.7   \t0.051 \t5  \t5.14 \t7  \t0.5103\n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "13 \t100  \t0.5   \t0.5   \t0.5   \t0     \t5  \t5    \t5  \t0     \n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "14 \t100  \t0.5   \t0.5   \t0.5   \t0     \t5  \t5    \t5  \t0     \n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "15 \t100  \t0.5   \t0.5   \t0.5   \t0     \t5  \t5    \t5  \t0     \n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "16 \t100  \t0.5   \t0.5   \t0.5   \t0     \t5  \t5    \t5  \t0     \n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "17 \t100  \t0.5   \t0.5   \t0.5   \t0     \t5  \t5    \t5  \t0     \n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "18 \t100  \t0.5   \t0.5   \t0.5   \t0     \t5  \t5    \t5  \t0     \n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "19 \t100  \t0.5   \t0.5   \t0.5   \t0     \t5  \t5    \t5  \t0     \n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
+      "20 \t100  \t0.5   \t0.5   \t0.5   \t0     \t5  \t5    \t5  \t0     \n",
+      "The best individual of this generation is: AddCP0(delP1(cobP0(u)), f)\n",
       " -= END OF EVOLUTION =- \n",
       "> MODEL TRAINING/SELECTION COMPLETED\n",
-      "The best individual is AddCP0(f, delP1(cobP0(u)))\n",
+      "The best individual is AddCP0(delP1(cobP0(u)), f)\n",
       "The best fitness on the training set is 0.5\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[36m(pid=671302)\u001b[0m [nexus7:671302] mca_base_component_repository_open: unable to open mca_btl_openib: librdmacm.so.1: cannot open shared object file: No such file or directory (ignored)\u001b[32m [repeated 23x across cluster]\u001b[0m\n",
-      "\u001b[36m(fitness pid=671296)\u001b[0m 2024-03-08 13:52:09.048260: E external/xla/xla/stream_executor/cuda/cuda_driver.cc:280] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\u001b[32m [repeated 23x across cluster]\u001b[0m\n",
-      "\u001b[36m(fitness pid=671296)\u001b[0m CUDA backend failed to initialize: FAILED_PRECONDITION: No visible GPU devices. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\u001b[32m [repeated 23x across cluster]\u001b[0m\n"
      ]
     },
     {
