--- a/examples/ex1.ipynb
+++ b/examples/ex1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,14 +182,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-03-22 15:25:58,808\tINFO worker.py:1636 -- Started a local Ray instance.\n"
+      "Platform 'METAL' is experimental and not all JAX functionality may be correctly supported!\n",
+      "2024-03-26 11:26:35.592288: W pjrt_plugin/src/mps_client.cc:563] WARNING: JAX Apple GPU support is experimental and not all JAX functionality is correctly supported!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metal device set to: Apple M2 Pro\n",
+      "\n",
+      "systemMemory: 32.00 GB\n",
+      "maxCacheSize: 10.67 GB\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-03-26 11:26:38,486\tINFO worker.py:1636 -- Started a local Ray instance.\n"
      ]
     },
     {
@@ -200,19 +219,19 @@
       "DONE.\n",
       " -= START OF EVOLUTION =- \n",
       "Evaluating initial population(s)...\n",
-      "\u001b[2m\u001b[36m(fitness pid=2164)\u001b[0m Metal device set to: Apple M2 Pro\n",
-      "\u001b[2m\u001b[36m(fitness pid=2164)\u001b[0m \n",
-      "\u001b[2m\u001b[36m(fitness pid=2164)\u001b[0m systemMemory: 32.00 GB\n",
-      "\u001b[2m\u001b[36m(fitness pid=2164)\u001b[0m maxCacheSize: 10.67 GB\n",
-      "\u001b[2m\u001b[36m(fitness pid=2164)\u001b[0m \n"
+      "\u001b[2m\u001b[36m(fitness pid=68521)\u001b[0m Metal device set to: Apple M2 Pro\n",
+      "\u001b[2m\u001b[36m(fitness pid=68521)\u001b[0m \n",
+      "\u001b[2m\u001b[36m(fitness pid=68521)\u001b[0m systemMemory: 32.00 GB\n",
+      "\u001b[2m\u001b[36m(fitness pid=68521)\u001b[0m maxCacheSize: 10.67 GB\n",
+      "\u001b[2m\u001b[36m(fitness pid=68521)\u001b[0m \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[2m\u001b[36m(fitness pid=2162)\u001b[0m Platform 'METAL' is experimental and not all JAX functionality may be correctly supported!\n",
-      "\u001b[2m\u001b[36m(fitness pid=2162)\u001b[0m 2024-03-22 15:26:01.245439: W pjrt_plugin/src/mps_client.cc:563] WARNING: JAX Apple GPU support is experimental and not all JAX functionality is correctly supported!\n"
+      "\u001b[2m\u001b[36m(fitness pid=68530)\u001b[0m Platform 'METAL' is experimental and not all JAX functionality may be correctly supported!\n",
+      "\u001b[2m\u001b[36m(fitness pid=68530)\u001b[0m 2024-03-26 11:26:41.017505: W pjrt_plugin/src/mps_client.cc:563] WARNING: JAX Apple GPU support is experimental and not all JAX functionality is correctly supported!\n"
      ]
     },
     {
@@ -223,81 +242,81 @@
       "   \t     \t           fitness            \t             size             \n",
       "   \t     \t------------------------------\t------------------------------\n",
       "gen\tevals\tmin   \tavg   \tmax   \tstd   \tmin\tavg \tmax\tstd   \n",
-      "1  \t100  \t0.7327\t2.8623\t3.0333\t0.2308\t3  \t3.54\t7  \t0.9319\n",
+      "1  \t100  \t1.1327\t2.9809\t3.3333\t0.2492\t3  \t4.81\t11 \t1.8745\n",
       "Best individuals of this generation:\n",
-      "AddCP0(AddCP0(f, u), delP1(cobP0(u)))\n",
-      "2  \t100  \t0.7327\t2.772 \t2.8333\t0.3491\t3  \t3.14\t9  \t0.8126\n",
+      "SubCP0(St1D1(St1P0(AddCP0(f, u))), St1D1(cobD0(St1P1(cobP0(u)))))\n",
+      "2  \t100  \t1.1327\t2.8319\t3.0333\t0.1788\t3  \t3.32\t11 \t1.2238\n",
       "Best individuals of this generation:\n",
-      "AddCP0(AddCP0(f, u), delP1(cobP0(u)))\n",
-      "3  \t100  \t0.5   \t2.7486\t2.8333\t0.4158\t3  \t3.16\t9  \t0.8333\n",
+      "SubCP0(St1D1(St1P0(AddCP0(f, u))), St1D1(cobD0(St1P1(cobP0(u)))))\n",
+      "3  \t100  \t1.0187\t2.7981\t2.8333\t0.2462\t3  \t3.15\t11 \t1.0524\n",
       "Best individuals of this generation:\n",
-      "AddCP0(f, delP1(cobP0(u)))\n",
-      "4  \t100  \t0.5   \t2.6696\t2.8333\t0.5579\t3  \t3.38\t11 \t1.4056\n",
+      "St1D1(SubCD1(cobD0(delD1(St1P0(u))), St1P0(SubCP0(u, f))))\n",
+      "4  \t100  \t1.0187\t2.748 \t2.8333\t0.3727\t3  \t3.4 \t13 \t1.7607\n",
       "Best individuals of this generation:\n",
-      "AddCP0(f, delP1(cobP0(u)))\n",
-      "5  \t100  \t0.5   \t2.6696\t2.8333\t0.5579\t3  \t3.38\t11 \t1.4056\n",
+      "St1D1(SubCD1(cobD0(delD1(St1P0(u))), St1P0(SubCP0(u, f))))\n",
+      "5  \t100  \t1.0187\t2.699 \t2.8333\t0.4566\t3  \t3.66\t13 \t2.2593\n",
       "Best individuals of this generation:\n",
-      "AddCP0(f, delP1(cobP0(u)))\n",
-      "6  \t100  \t0.5   \t2.6036\t2.8333\t0.6569\t3  \t3.48\t11 \t1.5263\n",
+      "St1D1(SubCD1(cobD0(delD1(St1P0(u))), St1P0(SubCP0(u, f))))\n",
+      "6  \t100  \t1.0187\t2.6627\t2.8333\t0.5131\t3  \t3.8 \t13 \t2.4249\n",
       "Best individuals of this generation:\n",
-      "AddCP0(f, delP1(cobP0(u)))\n",
-      "7  \t100  \t0.5   \t2.5613\t2.8333\t0.6967\t3  \t3.66\t11 \t1.7901\n",
+      "St1D1(SubCD1(cobD0(delD1(St1P0(u))), St1P0(SubCP0(u, f))))\n",
+      "7  \t100  \t1.0187\t2.5932\t2.8333\t0.5954\t3  \t4.19\t13 \t2.7989\n",
       "Best individuals of this generation:\n",
-      "AddCP0(f, delP1(cobP0(u)))\n",
-      "8  \t100  \t0.5   \t2.3726\t2.8333\t0.8636\t3  \t4.04\t11 \t2.1068\n",
+      "St1D1(SubCD1(cobD0(delD1(St1P0(u))), St1P0(SubCP0(u, f))))\n",
+      "8  \t100  \t0.7   \t2.4524\t2.8333\t0.7191\t3  \t4.79\t13 \t3.2781\n",
       "Best individuals of this generation:\n",
-      "AddCP0(f, delP1(cobP0(u)))\n",
-      "9  \t100  \t0.5   \t2.1732\t2.8333\t0.9759\t3  \t4.42\t11 \t2.3203\n",
+      "SubCP0(St1D1(cobD0(St1P1(cobP0(u)))), f)\n",
+      "9  \t100  \t0.7   \t2.2964\t2.8333\t0.805 \t3  \t5.49\t13 \t3.6783\n",
       "Best individuals of this generation:\n",
-      "AddCP0(f, delP1(cobP0(u)))\n",
-      "10 \t100  \t0.5   \t1.8866\t2.8333\t1.043 \t3  \t5.1 \t11 \t2.5826\n",
+      "SubCP0(St1D1(cobD0(St1P1(cobP0(u)))), f)\n",
+      "10 \t100  \t0.7   \t2.0506\t2.8333\t0.8696\t3  \t6.55\t13 \t3.9048\n",
       "Best individuals of this generation:\n",
-      "AddCP0(f, delP1(cobP0(u)))\n",
-      "11 \t100  \t0.5   \t1.4953\t2.8333\t0.9993\t3  \t6.02\t11 \t2.6457\n",
+      "SubCP0(St1D1(cobD0(St1P1(cobP0(u)))), f)\n",
+      "11 \t100  \t0.7   \t1.8681\t2.8333\t0.8632\t3  \t7.43\t13 \t3.9198\n",
       "Best individuals of this generation:\n",
-      "AddCP0(f, delP1(cobP0(u)))\n",
-      "12 \t100  \t0.5   \t0.8212\t2.4368\t0.3993\t5  \t7.4 \t15 \t2.2978\n",
+      "SubCP0(St1D1(cobD0(St1P1(cobP0(u)))), f)\n",
+      "12 \t100  \t0.7   \t1.5391\t2.8333\t0.7581\t3  \t8.94\t13 \t3.3965\n",
       "Best individuals of this generation:\n",
-      "AddCP0(f, delP1(cobP0(u)))\n",
-      "13 \t100  \t0.5   \t0.6271\t0.9   \t0.1487\t5  \t6.2 \t9  \t1.4422\n",
+      "SubCP0(St1D1(cobD0(St1P1(cobP0(u)))), f)\n",
+      "13 \t100  \t0.7   \t1.0959\t1.7791\t0.1653\t7  \t10.66\t15 \t1.3727\n",
       "Best individuals of this generation:\n",
-      "AddCP0(f, delP1(cobP0(u)))\n",
-      "14 \t100  \t0.5   \t0.5282\t0.7187\t0.0699\t5  \t5.28\t7  \t0.694 \n",
+      "SubCP0(St1D1(cobD0(St1P1(cobP0(u)))), f)\n",
+      "14 \t100  \t0.7   \t1.041 \t1.1327\t0.1123\t7  \t10.21\t11 \t1.0227\n",
       "Best individuals of this generation:\n",
-      "AddCP0(f, delP1(cobP0(u)))\n",
-      "15 \t100  \t0.5   \t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
+      "SubCP0(St1D1(cobD0(St1P1(cobP0(u)))), f)\n",
+      "15 \t100  \t0.7   \t1.0064\t1.1327\t0.1214\t7  \t9.91 \t11 \t1.1233\n",
       "Best individuals of this generation:\n",
-      "AddCP0(f, delP1(cobP0(u)))\n",
-      "16 \t100  \t0.5   \t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
+      "SubCP0(St1D1(cobD0(St1P1(cobP0(u)))), f)\n",
+      "16 \t100  \t0.7   \t0.9247\t1.1   \t0.1124\t7  \t9.17 \t11 \t1.0682\n",
       "Best individuals of this generation:\n",
-      "AddCP0(f, delP1(cobP0(u)))\n",
-      "17 \t100  \t0.5   \t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
+      "SubCP0(St1D1(cobD0(St1P1(cobP0(u)))), f)\n",
+      "17 \t100  \t0.7   \t0.8705\t1.0187\t0.11  \t7  \t8.66 \t10 \t1.0509\n",
       "Best individuals of this generation:\n",
-      "AddCP0(f, delP1(cobP0(u)))\n",
-      "18 \t100  \t0.5   \t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
+      "SubCP0(St1D1(cobD0(St1P1(cobP0(u)))), f)\n",
+      "18 \t100  \t0.7   \t0.816 \t0.9   \t0.0987\t7  \t8.16 \t9  \t0.9871\n",
       "Best individuals of this generation:\n",
-      "AddCP0(f, delP1(cobP0(u)))\n",
-      "19 \t100  \t0.5   \t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
+      "SubCP0(St1D1(cobD0(St1P1(cobP0(u)))), f)\n",
+      "19 \t100  \t0.7   \t0.766 \t0.9   \t0.094 \t7  \t7.66 \t9  \t0.9404\n",
       "Best individuals of this generation:\n",
-      "AddCP0(f, delP1(cobP0(u)))\n",
-      "20 \t100  \t0.5   \t0.5   \t0.5   \t0     \t5  \t5   \t5  \t0     \n",
+      "SubCP0(St1D1(cobD0(St1P1(cobP0(u)))), f)\n",
+      "20 \t100  \t0.7   \t0.708 \t0.9   \t0.0392\t7  \t7.08 \t9  \t0.3919\n",
       "Best individuals of this generation:\n",
-      "AddCP0(f, delP1(cobP0(u)))\n",
+      "SubCP0(St1D1(cobD0(St1P1(cobP0(u)))), f)\n",
       " -= END OF EVOLUTION =- \n",
-      "The best individual is AddCP0(f, delP1(cobP0(u)))\n",
-      "The best fitness on the training set is 0.5\n",
-      "\u001b[2m\u001b[36m(fitness pid=2157)\u001b[0m Metal device set to: Apple M2 Pro\u001b[32m [repeated 9x across cluster]\u001b[0m\n",
-      "\u001b[2m\u001b[36m(fitness pid=2157)\u001b[0m \u001b[32m [repeated 18x across cluster]\u001b[0m\n",
-      "\u001b[2m\u001b[36m(fitness pid=2157)\u001b[0m systemMemory: 32.00 GB\u001b[32m [repeated 9x across cluster]\u001b[0m\n",
-      "\u001b[2m\u001b[36m(fitness pid=2157)\u001b[0m maxCacheSize: 10.67 GB\u001b[32m [repeated 9x across cluster]\u001b[0m\n"
+      "The best individual is SubCP0(St1D1(cobD0(St1P1(cobP0(u)))), f)\n",
+      "The best fitness on the training set is 0.7\n",
+      "\u001b[2m\u001b[36m(fitness pid=68523)\u001b[0m Metal device set to: Apple M2 Pro\u001b[32m [repeated 9x across cluster] (Ray deduplicates logs by default. Set RAY_DEDUP_LOGS=0 to disable log deduplication, or see https://docs.ray.io/en/master/ray-observability/ray-logging.html#log-deduplication for more options.)\u001b[0m\n",
+      "\u001b[2m\u001b[36m(fitness pid=68523)\u001b[0m \u001b[32m [repeated 18x across cluster]\u001b[0m\n",
+      "\u001b[2m\u001b[36m(fitness pid=68523)\u001b[0m systemMemory: 32.00 GB\u001b[32m [repeated 9x across cluster]\u001b[0m\n",
+      "\u001b[2m\u001b[36m(fitness pid=68523)\u001b[0m maxCacheSize: 10.67 GB\u001b[32m [repeated 9x across cluster]\u001b[0m\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[2m\u001b[36m(fitness pid=2156)\u001b[0m Platform 'METAL' is experimental and not all JAX functionality may be correctly supported!\u001b[32m [repeated 9x across cluster]\u001b[0m\n",
-      "\u001b[2m\u001b[36m(fitness pid=2156)\u001b[0m 2024-03-22 15:26:01.246957: W pjrt_plugin/src/mps_client.cc:563] WARNING: JAX Apple GPU support is experimental and not all JAX functionality is correctly supported!\u001b[32m [repeated 9x across cluster]\u001b[0m\n"
+      "\u001b[2m\u001b[36m(fitness pid=68523)\u001b[0m Platform 'METAL' is experimental and not all JAX functionality may be correctly supported!\u001b[32m [repeated 9x across cluster]\u001b[0m\n",
+      "\u001b[2m\u001b[36m(fitness pid=68523)\u001b[0m 2024-03-26 11:26:41.017805: W pjrt_plugin/src/mps_client.cc:563] WARNING: JAX Apple GPU support is experimental and not all JAX functionality is correctly supported!\u001b[32m [repeated 9x across cluster]\u001b[0m\n"
      ]
     },
     {
