Removed joblib params.

--- a/examples/example_poisson.ipynb
+++ b/examples/example_poisson.ipynb
@@ -203,7 +203,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-04-17 16:36:18,011\tINFO worker.py:1743 -- Started a local Ray instance. View the dashboard at \u001b[1m\u001b[32m127.0.0.1:8265 \u001b[39m\u001b[22m\n"
+      "2024-04-17 16:41:59,188\tINFO worker.py:1743 -- Started a local Ray instance. View the dashboard at \u001b[1m\u001b[32m127.0.0.1:8265 \u001b[39m\u001b[22m\n"
      ]
     },
     {
@@ -220,7 +220,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[36m(fitness pid=4072075)\u001b[0m An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n"
+      "\u001b[36m(fitness pid=4116492)\u001b[0m An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n"
      ]
     },
     {
@@ -231,21 +231,30 @@
       "   \t     \t           fitness            \t             size             \n",
       "   \t     \t------------------------------\t------------------------------\n",
       "gen\tevals\tmin   \tavg   \tmax   \tstd   \tmin\tavg \tmax\tstd   \n",
-      "1  \t100  \t0.0001\t2.4754\t2.5333\t0.3581\t3  \t8.45\t27 \t5.2695\n",
+      "1  \t100  \t0.0327\t2.4773\t2.5333\t0.3542\t3  \t7.31\t19 \t4.0017\n",
       "Best individuals of this generation:\n",
-      "AddCP0(St1D1(cobD0(SubCD0(delD1(St1P0(f)), delD1(cobD0(St1P1(cobP0(u))))))), SubCP0(f, AddCP0(f, u)))\n",
-      "2  \t100  \t0.0001\t2.4181\t2.5333\t0.4971\t3  \t8.48\t27 \t5.2735\n",
+      "AddCP0(AddCP0(f, u), delP1(cobP0(u)))\n",
+      "2  \t100  \t0.0327\t2.4773\t2.5333\t0.3542\t3  \t7.31\t19 \t4.0017\n",
       "Best individuals of this generation:\n",
-      "AddCP0(St1D1(cobD0(SubCD0(delD1(St1P0(f)), delD1(cobD0(St1P1(cobP0(u))))))), SubCP0(f, AddCP0(f, u)))\n",
-      "3  \t100  \t0.0001\t2.3409\t2.5333\t0.6259\t3  \t8.78\t27 \t5.2528\n",
+      "AddCP0(AddCP0(f, u), delP1(cobP0(u)))\n",
+      "3  \t100  \t0.0327\t2.4737\t2.5333\t0.3555\t3  \t7.39\t19 \t3.9947\n",
       "Best individuals of this generation:\n",
-      "AddCP0(St1D1(cobD0(SubCD0(delD1(St1P0(f)), delD1(cobD0(St1P1(cobP0(u))))))), SubCP0(f, AddCP0(f, u)))\n",
-      "4  \t100  \t0     \t2.1278\t2.5333\t0.8647\t3  \t9.26\t25 \t5.1684\n",
+      "AddCP0(AddCP0(f, u), delP1(cobP0(u)))\n",
+      "4  \t100  \t0.0327\t2.4391\t2.5333\t0.4339\t3  \t7.66\t21 \t4.2993\n",
       "Best individuals of this generation:\n",
-      "SubCP0(SubCP0(u, delP1(cobP0(u))), AddCP0(f, u))\n",
+      "AddCP0(AddCP0(f, u), delP1(cobP0(u)))\n",
+      "5  \t100  \t0.0327\t2.4063\t2.5333\t0.4473\t3  \t8.25\t23 \t4.6997\n",
+      "Best individuals of this generation:\n",
+      "AddCP0(AddCP0(f, u), delP1(cobP0(u)))\n",
+      "6  \t100  \t0.0327\t2.3315\t2.5333\t0.4593\t3  \t9.82\t23 \t5.2314\n",
+      "Best individuals of this generation:\n",
+      "AddCP0(AddCP0(f, u), delP1(cobP0(u)))\n",
+      "7  \t100  \t0     \t2.1711\t2.5333\t0.5892\t3  \t12.28\t23 \t4.8828\n",
+      "Best individuals of this generation:\n",
+      "AddCP0(f, delP1(cobP0(u)))\n",
       "EARLY STOPPING.\n",
       " -= END OF EVOLUTION =- \n",
-      "The best individual is SubCP0(SubCP0(u, delP1(cobP0(u))), AddCP0(f, u))\n",
+      "The best individual is AddCP0(f, delP1(cobP0(u)))\n",
       "The best fitness on the training set is 0.0\n"
      ]
     },
@@ -253,7 +262,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[36m(fitness pid=4072077)\u001b[0m An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\u001b[32m [repeated 23x across cluster] (Ray deduplicates logs by default. Set RAY_DEDUP_LOGS=0 to disable log deduplication, or see https://docs.ray.io/en/master/ray-observability/ray-logging.html#log-deduplication for more options.)\u001b[0m\n"
+      "\u001b[36m(fitness pid=4116478)\u001b[0m An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\u001b[32m [repeated 23x across cluster] (Ray deduplicates logs by default. Set RAY_DEDUP_LOGS=0 to disable log deduplication, or see https://docs.ray.io/en/master/ray-observability/ray-logging.html#log-deduplication for more options.)\u001b[0m\n"
      ]
     },
     {
@@ -270,6 +279,34 @@
    "source": [
     "stgp_poisson()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
